updated swagger validations
